checkbox : fixed checkbox layout issue when located list-divider

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.checkboxradio.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.forms.checkboxradio.less
@@ -210,3 +210,10 @@
 	border: 2px solid @color_checkboxradio_radio_bg_press_line;
 	background-color: @color_checkboxradio_radio_btn_press;
 }
+
+.ui-li-divider .ui-btn-text a {
+	padding: 11 * @unit_base 55 * @unit_base;
+	display: block;
+	text-decoration: none;
+	color: @color_list_main_text_normal;
+}
