--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.listview.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.listview.less
@@ -568,7 +568,7 @@
 	&[data-style="check"] {
 		height: 41 * @unit_base;
 		padding-top: 0;
-		background-color: rgb(43, 42, 97);
+		background-color: @color_searchbar_bg;
 		.ui-divider-normal-line { display: none; }
 
 		.ui-btn-text {
